use sample_data in examples

--- a/docs/source/examples/Split Transform Method.ipynb
+++ b/docs/source/examples/Split Transform Method.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from prysm import Interferogram, Pupil, PSF\n",
+    "from prysm import Interferogram, Pupil, PSF, sample_files\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "plt.style.use('bmh')"
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = Path('~').expanduser() / 'Desktop' / 'sample_file.dat'\n",
+    "p = sample_files('dat')  # sample Zygo .dat file, will be downloaded on demand and saved locally\n",
     "i = Interferogram.from_zygo_dat(p)\n",
     "i.crop().mask('circle', 100).crop()\n",
     "i.remove_piston_tiptilt_power()\n",
