--- a/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
+++ b/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
@@ -11,13 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from prysm import Interferogram, FringeZernike\n",
+    "from prysm import Interferogram, FringeZernike, sample_files\n",
     "from prysm.fringezernike import fit\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = Path('~').expanduser() / 'Desktop' / 'sample_file.dat'\n",
+    "p = sample_files('dat')  # sample Zygo .dat file, will be downloaded on demand and saved locally\n",
     "i = Interferogram.from_zygo_dat(p)\n",
     "i.crop().mask('circle', 100).crop()\n",
     "i.remove_piston_tiptilt_power()\n",
