--- a/docs/source/examples/Split Transform Method.ipynb
+++ b/docs/source/examples/Split Transform Method.ipynb
@@ -11,12 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "from prysm import Interferogram, Pupil, PSF, sample_files\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
@@ -31,9 +29,10 @@
    "source": [
     "p = sample_files('dat')  # sample Zygo .dat file, will be downloaded on demand and saved locally\n",
     "i = Interferogram.from_zygo_dat(p)\n",
-    "i.crop().mask('circle', 100).crop()\n",
+    "i.crop().mask('circle', 40).crop()\n",
     "i.remove_piston_tiptilt_power()\n",
-    "i.plot2d(clim=100)  # verify the phase looks OK"
+    "i.plot2d(clim=100, interp_method=None)  # verify the phase looks OK\n",
+    "plt.grid(False)"
    ]
   },
   {
@@ -68,7 +67,7 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
-    "i.plot_psd_xyavg(fig=fig, ax=ax)\n",
+    "i.plot_psd_slices(fig=fig, ax=ax, mode='period', xlim=(25, 0.25), lw=2)\n",
     "fig, ax = plt.subplots()\n",
     "# bicubic is highly recommended when the view is small with many pixels\n",
     "psf.plot2d(axlim=psf.support / 2,\n",
