--- a/docs/source/examples/System Model.ipynb
+++ b/docs/source/examples/System Model.ipynb
@@ -34,18 +34,18 @@
    "outputs": [],
    "source": [
     "# data from a wavefront sensor, optical design program, etc...\n",
-    "zernikes = [0, 0, 0, 0, 0.125, 0.125, -0.05, -0.05, 0.2]\n",
+    "coefficients = [0, 0, 0, 0, 0.1, 0.1, -0.025, -0.025, 0.1]\n",
     "\n",
     "# a pentagonal aperture inscribed in a square 10mm on a side with 50mm EFL\n",
-    "pupil = FringeZernike(zernikes, dia=10, mask='pentagon', opd_unit='um', norm=True)\n",
-    "psf = PSF.from_pupil(pupil, efl=50)"
+    "pupil = FringeZernike(coefficients, dia=10, mask='circle', opd_unit='um', norm=True)\n",
+    "psf = PSF.from_pupil(pupil, efl=40)  # F/4"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have implicitly accepted the default wavelength of 0.5 microns, and Q factor of 2 (Nyquist sampling) which are usually sane defaults. The pupil is pentagonal in shape and is sufficiently described by a Zernike expansion up to Z9.\n",
+    "Here we have implicitly accepted the default wavelength of 0.5 microns, and Q factor of 2 (Nyquist sampling) which are usually sane defaults. The pupil is circular and is sufficiently described by a Zernike expansion up to Z9.\n",
     "\n",
     "We can plot the wavefront or PSF of the objective.  The wavefront will appear to not quite fill the array, but this is just an artifact of the default lanczos interpolation and relatively few samples."
    ]
@@ -56,11 +56,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = pupil.plot2d()\n",
+    "fig, ax = pupil.plot2d(interp_method='nearest')\n",
     "ax.grid(False)\n",
     "ax.set_title('Wavefront')\n",
     "\n",
-    "fig, ax = psf.plot2d(axlim=25, power=2)  # 1/2 stretch, colorbar scales as well.\n",
+    "fig, ax = psf.plot2d(axlim=40, power=2)  # 1/2 stretch, colorbar scales as well.\n",
     "ax.grid(False)\n",
     "ax.set_title('PSF');"
    ]
@@ -88,10 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pixel_pitch = 5  # 5 micron pixels\n",
+    "pixel_pitch = 10  # 5 micron pixels\n",
     "aa_filter = OLPF(pixel_pitch*0.66)\n",
     "pixel = PixelAperture(pixel_pitch)\n",
-    "sys_psf = psf.conv(aa_filter).conv(pixel)"
+    "sys_psf = psf.conv(aa_filter).conv(pixel).renorm()  # renorm so max=1"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys_psf.show(xlim=25)  # sys_psf is a Convolvable, not a PSF.\n",
+    "sys_psf.show(xlim=40, interp_method='lanczos', power=2)  # sys_psf is a Convolvable, not a PSF.\n",
     "plt.grid(False)"
    ]
   },
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information on the classes used, see `Zernikes <../user_guide/zernikes>`_, `PSFs <../user_guide/psfs>`_, `MTFs <../user_guide/mtfs>`_, and `PixelApertures, OLPFs, and convolutions <../user_guide/convolvables>`_."
+    "For more information on the classes used, see [Zernikes](../user_guide/zernikes), [PSFs](../user_guide/psfs), [MTFs](../user_guide/mtfs), and [PixelApertures, OLPFs, and convolutions](../user_guide/convolvables)"
    ]
   },
   {
@@ -133,11 +133,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "psf.conv(pixel).show(xlim=25, interp_method='lanczos', power=2)\n",
-    "#psf.show(xlim=25, interp_method='lanczos')\n",
-    "plt.grid(False)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
