--- a/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
+++ b/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
@@ -15,8 +15,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
     "from prysm import Interferogram, FringeZernike, sample_files\n",
     "from prysm.fringezernike import fit\n",
     "\n",
@@ -39,10 +37,11 @@
    "source": [
     "p = sample_files('dat')  # sample Zygo .dat file, will be downloaded on demand and saved locally\n",
     "i = Interferogram.from_zygo_dat(p)\n",
-    "i.crop().mask('circle', 100).crop()\n",
+    "i.crop().mask('circle', 40).crop()\n",
     "i.remove_piston_tiptilt_power()\n",
     "print(i.pv, i.rms)\n",
-    "i.plot2d(clim=100)  # +/- 100 nm"
+    "i.plot2d(clim=100, interp_method='bilinear')  # +/- 100 nm\n",
+    "plt.grid(False)"
    ]
   },
   {
@@ -59,7 +58,7 @@
    "outputs": [],
    "source": [
     "i.change_phase_unit('waves')\n",
-    "print(i.pv, i.rms)"
+    "1/i.pv, 1/i.rms  # print reciprocal -- \"one over xxx waves\""
    ]
   },
   {
@@ -77,7 +76,7 @@
    "source": [
     "i.change_phase_unit('nm')\n",
     "i.fill()\n",
-    "print(i.bandlimited_rms(1,10))"
+    "i.bandlimited_rms(1,10)"
    ]
   },
   {
@@ -98,7 +97,7 @@
     "# do this on data which has not been filled to avoid errors introduced by the fill value.\n",
     "coefficients = fit(i.phase, terms=36, norm=True)\n",
     "fz = FringeZernike(coefficients, dia=i.diameter, opd_unit=i.phase_unit, norm=True)\n",
-    "print(fz)"
+    "fz"
    ]
   },
   {
@@ -114,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(fz.top_n(5))"
+    "fz.top_n(5)"
    ]
   },
   {
@@ -130,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fz.barplot_magnitudes(orientation='v')"
+    "fz.barplot_magnitudes(orientation='v', sort=True)"
    ]
   },
   {
@@ -146,8 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "i.mask('invertedcircle', 25)\n",
-    "i.plot2d(clim=100)  # +/- 100 nm"
+    "i.mask('invertedcircle', 7)\n",
+    "i.plot2d(clim=100)  # +/- 100 nm\n",
+    "plt.grid(False)"
    ]
   }
  ],
