update ipynb docs

--- a/docs/source/examples/System Model.ipynb
+++ b/docs/source/examples/System Model.ipynb
@@ -125,15 +125,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more information on the classes used, see [Zernikes](../user_guide/zernikes), [PSFs](../user_guide/psfs), [MTFs](../user_guide/mtfs), and [PixelApertures, OLPFs, and convolutions](../user_guide/convolvables)"
+    "For more information on the classes used, see [Zernikes](../user_guide/Zernikes.ipynb), [PSFs](../user_guide/PSFs.ipynb), [MTFs](../user_guide/MTFs.ipynb), and [PixelApertures, OLPFs, and convolutions](../user_guide/Convolvables.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
