fix interferometer data example, tune up system model example

--- a/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
+++ b/docs/source/examples/Analysis of Interferometric Wavefront Data.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm import Interferogram, FringeZernike, sample_files\n",
-    "from prysm.fringezernike import fit\n",
+    "from prysm import Interferogram, FringeZernike, sample_files, zernikefit\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "plt.style.use('bmh')"
@@ -95,7 +94,7 @@
    "outputs": [],
    "source": [
     "# do this on data which has not been filled to avoid errors introduced by the fill value.\n",
-    "coefficients = fit(i.phase, terms=36, norm=True)\n",
+    "coefficients = zernikefit(i.phase, terms=36, norm=True, map_='fringe')\n",
     "fz = FringeZernike(coefficients, dia=i.diameter, opd_unit=i.phase_unit, norm=True)\n",
     "fz"
    ]
@@ -149,6 +148,13 @@
     "i.plot2d(clim=100)  # +/- 100 nm\n",
     "plt.grid(False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
