--- a/docs/source/examples/System Model.ipynb
+++ b/docs/source/examples/System Model.ipynb
@@ -36,9 +36,10 @@
     "# data from a wavefront sensor, optical design program, etc...\n",
     "coefficients = [0, 0, 0, 0, 0.1, 0.1, -0.025, -0.025, 0.1]\n",
     "\n",
-    "# a pentagonal aperture inscribed in a square 10mm on a side with 50mm EFL\n",
+    "# a circular aperture inscribed in a square 10mm on a side with 50mm EFL\n",
+    "# note the default mask is a circle, so the kwarg is somewhat redundant here.\n",
     "pupil = FringeZernike(coefficients, dia=10, mask='circle', opd_unit='um', norm=True)\n",
-    "psf = PSF.from_pupil(pupil, efl=40)  # F/4"
+    "psf = PSF.from_pupil(pupil, efl=40)  # F/2"
    ]
   },
   {
@@ -60,7 +61,7 @@
     "ax.grid(False)\n",
     "ax.set_title('Wavefront')\n",
     "\n",
-    "fig, ax = psf.plot2d(axlim=40, power=2)  # 1/2 stretch, colorbar scales as well.\n",
+    "fig, ax = psf.plot2d(axlim=20, power=2)  # 1/2 stretch, colorbar scales as well.\n",
     "ax.grid(False)\n",
     "ax.set_title('PSF');"
    ]
@@ -69,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "or compute its MTF.  Note that \"tan\" and \"sag\" here accept the assumption of optical design code that we are looking at an object extended in Y, with no extent in X.  For example, this means we could be at an (x,y) field point of (1, 0) degrees.  On-axis, tan and sag are simply misgnomers for the \"x\" and \"y\" MTFs."
+    "or compute its MTF.  Note that \"tan\" and \"sag\" here accept the assumption of optical design code that we are looking at an object extended in Y, with no extent in X.  For example, this means we could be at an (x,y) field point of (0, 1) degrees.  On-axis, tan and sag are simply misgnomers for the \"x\" and \"y\" MTFs."
    ]
   },
   {
@@ -79,7 +80,7 @@
    "outputs": [],
    "source": [
     "mtf = MTF.from_psf(psf)\n",
-    "mtf.plot_tan_sag(max_freq=100)"
+    "mtf.plot_tan_sag(max_freq=200)"
    ]
   },
   {
@@ -88,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pixel_pitch = 10  # 5 micron pixels\n",
+    "pixel_pitch = 5  # 5 micron diameter pixels\n",
     "aa_filter = OLPF(pixel_pitch*0.66)\n",
     "pixel = PixelAperture(pixel_pitch)\n",
     "sys_psf = psf.conv(aa_filter).conv(pixel).renorm()  # renorm so max=1"
@@ -107,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys_psf.show(xlim=40, interp_method='lanczos', power=2)  # sys_psf is a Convolvable, not a PSF.\n",
+    "sys_psf.show(xlim=20, interp_method='lanczos', power=2)  # sys_psf is a Convolvable, not a PSF.\n",
     "plt.grid(False)"
    ]
   },
@@ -118,7 +119,23 @@
    "outputs": [],
    "source": [
     "sys_mtf = MTF.from_psf(sys_psf)\n",
-    "sys_mtf.plot_tan_sag(max_freq=100)"
+    "sys_mtf.plot_tan_sag(max_freq=200)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see the system MTF reach zero at 200 cy/mm, as would be expected for a 5 micron pixel.  We also see the PSF is significantly squared off, since the pixel aperture contribution is larger than that of the optical system.  One might find the azimuthally averaged MTF to be more informative:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sys_mtf.plot_azimuthal_average(max_freq=200)"
    ]
   },
   {
