touch up Zernike docs

--- a/docs/source/user_guide/Pupils.ipynb
+++ b/docs/source/user_guide/Pupils.ipynb
@@ -17,6 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "from prysm import Pupil\n",
     "p = Pupil()"
    ]
