--- a/docs/source/user_guide/Zernikes.ipynb
+++ b/docs/source/user_guide/Zernikes.ipynb
@@ -6,20 +6,19 @@
    "source": [
     "# Zernikes\n",
     "\n",
-    "Prysm supports two flavors of Zernike polynomials; the Fringe set up to the 49th term, and the Zemax Standard set up to the 48th term. They have identical interfaces, so only one will be shown here.\n",
+    "Prysm supports two flavors of Zernike polynomials; the Fringe set up to the 49th term, and the Noll set up to the 36th term. They have identical interfaces, so only one will be shown here.\n",
     "\n",
     "Zernike notations are a subclass of [Pupil](./Pupils.ipynb), so they support the same arguments to `__init__`,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from prysm import FringeZernike, StandardZernike\n",
+    "%matplotlib inline\n",
+    "from prysm import FringeZernike, NollZernike\n",
     "p = FringeZernike(samples=123, dia=456.7, wavelength=1.0, opd_unit='nm', mask='dodecagon')"
    ]
   },
@@ -64,25 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "FringeZernike has many features StandardZernike does not. At the module level are two functions,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from prysm.fringezernike import fzname, fzset_to_magnitude_angle"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`fzname` takes an index and optional base (default 0) kwarg and returns the name of that term. `fzset_to_magnitude_angle` takes a non-sparse iterable of fringe zernike coefficients, starting with piston, and returns a dictionary with keywords of terms (e.g. “Primary Astigmatism”) and items that are length 2 tuples of (magnitude, angle) where magnitude is in the same units as the zernike coefficients and the angle is in degrees. `fzset_to_magnitude_angle`’s output format can be seen below on the example of `FringeZernike.magnitudes`.\n",
-    "\n",
-    "FringeZernike instances have a `truncate` method which discards terms with indices higher than n. For example,"
+    "Zernike instances have a `truncate` method which discards terms with indices higher than n. For example,"
    ]
   },
   {
@@ -184,28 +165,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "each of these takes arguments of (rho, phi). They have names which end with _x, or _00 and _45 for the terms which have that naming convention.\n",
-    "\n",
-    "Perhaps more convenient is a dictionary which numbers them,"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from prysm._zernike import _zernikes\n",
-    "from prysm.fringezernike import zernmap\n",
-    "zfunction = _zernikes[zernmap[8]]\n",
-    "zfunction, zfunction.name, zfunction.norm"
+    "each of these takes arguments of (rho, phi). They have names which end with _x, or _00 and _45 for the terms which have that naming convention."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If these will always be evaluted over a square region enclosing the unit circle, a cache is available to speed computation,"
+    "Zernike functions are cached by prysm's internal routines,"
    ]
   },
   {
@@ -214,8 +181,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm.fringezernike import zcache\n",
-    "zcache(8, norm=True, samples=128)  # base 0\n",
+    "from prysm.zernike import zcache\n",
+    "# 8 is the index into prysm.zernike.zernikes, which loosely follows the Fringe ordering\n",
+    "zcache(8, norm=True, samples=128)\n",
     "zcache.clear()  # you should never have to do this unless you want to release memory"
    ]
   },
@@ -232,23 +200,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prysm.fringezernike import FZCache\n",
-    "my_fzcache = FZCache()"
+    "from prysm.zernike import ZCache\n",
+    "my_zcache = ZCache()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See [Pupils](./Pupils.ipynb) for information about general pupil functions. Below, the Fringe type of Zernike description has its full documentation printed."
+    "See [Pupils](./Pupils.ipynb) for information about general pupil functions."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
