tweak example docs

--- a/docs/source/examples/Diffraction Limited PSF and MTF.ipynb
+++ b/docs/source/examples/Diffraction Limited PSF and MTF.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "from matplotlib import pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.style.use('ggplot')"
+    "plt.style.use('bmh')"
    ]
   },
   {
@@ -40,7 +40,7 @@
     "\n",
     "# mask_target is just a performance optimization\n",
     "# more samples makes for more accuracy.\n",
-    "# The below would get you amost the ame answer:\n",
+    "# The below would get you amost the same answer:\n",
     "# p = Pupil(wavelength=wavelength, dia=epd)\n",
     "\n",
     "p = Pupil(wavelength=wavelength, dia=epd, mask_target='fcn', samples=256)\n",
