--- a/docs/source/examples/Split Transform Method.ipynb
+++ b/docs/source/examples/Split Transform Method.ipynb
@@ -18,6 +18,7 @@
     "from prysm import Interferogram, Pupil, PSF, sample_files\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
     "plt.style.use('bmh')"
    ]
   },
