--- a/docs/source/examples/System Model.ipynb
+++ b/docs/source/examples/System Model.ipynb
@@ -17,6 +17,7 @@
    "source": [
     "from prysm import FringeZernike, PSF, MTF, PixelAperture, OLPF\n",
     "from matplotlib import pyplot as plt\n",
+    "%matplotlib inline\n",
     "plt.style.use('bmh')"
    ]
   },
