add more text to wavefront sensing example

--- a/docs/source/examples/Image-Based Wavefront Sensing.ipynb
+++ b/docs/source/examples/Image-Based Wavefront Sensing.ipynb
@@ -296,13 +296,21 @@
     "\n",
     "* improved flexibility w.r.t units, pupil shapes, etc\n",
     "\n",
-    "* estimation of Q\n",
+    "* estimation of Q or other system parameters\n",
+    "\n",
+    "* inclusion of focal plane effects\n",
     "\n",
     "* extension to N PSFs instead of 3\n",
     "\n",
     "* use of more terms\n",
     "\n",
-    "* use of other types of phase diversity instead of focus."
+    "* use of other types of phase diversity instead of focus\n",
+    "\n",
+    "* formulation of a cost function better connected to the error in the wavefront estimate\n",
+    "\n",
+    "* tracking of the optimizer to better understand the course of optimization\n",
+    "\n",
+    "* use of other data, such as [MTF](https://static1.squarespace.com/static/578d10066a4963fd85e0aa32/t/5af25e61aa4a99ed9ecfa39c/1525833475522/bdd_ug_thesis_10.pdf)"
    ]
   }
  ],
