--- a/docs/source/examples/Image-Based Wavefront Sensing.ipynb
+++ b/docs/source/examples/Image-Based Wavefront Sensing.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "In this example, we will show how ot implement image-based wavefront sensing based on prysm.  We will use the library both to synthesize the truth data, and as the embedded modeling tool used as part of the optimization routine.\n",
     "\n",
-    "We begin by importing a few classes and functions from prysm, scipy, and stdlib and defining a function to generate data from a dictionary of zernike coefficients,"
+    "We begin by importing a few classes and functions from prysm and other modules and writing some functions to generate data from zernike coefficients,"
    ]
   },
   {
@@ -17,9 +17,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "from functools import partial\n",
     "\n",
     "import numpy as np\n",
@@ -61,7 +58,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function is quite terse, but has a lot going on.  `zerns` is a dictionary that contains key-value pairs of (Noll) Zernike indexes and their coefficients.  `mask_target` is used to avoid masking the phase, improving performance.  We make explicit that the pupil is circular with `mask`.  It will be used both inside the optimizer and to synthesize data.  We will treat EFL, EPD, Q, and $\\lambda$ as known.\n",
+    "`zernikes_to_psfs` is quite terse, but has a lot going on.  `zerns` is a dictionary that contains key-value pairs of (Noll) Zernike indexes and their coefficients.  Unpacking it allows us use arbitrary combinations of Zernike terms within the algorithm.  In `zernikes_to_pupil,` `mask_target` is used to avoid masking the phase during optimization, improving performance.  We make explicit that the pupil is circular with `mask`.  It will be used both inside the optimizer and to synthesize data.  We will treat EFL, EPD, Q, and $\\lambda$ as known.\n",
     "\n",
     "Next, we synthesize the truth data."
    ]
@@ -169,9 +166,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the computer this document was written on, the time is 5.5ms per run.  So we should expect much less than a second per iteration of the optimizer, and that this problem is not so large that running it requires a supercomputer.\n",
+    "On the computer this document was written on, the time is 5.5ms per run.  So we should expect much less than a second per iteration of the optimizer; this problem is not so large that running it requires a supercomputer.\n",
     "\n",
-    "All that is left to do is ask the optimizer kindly for the true wavefront, given a guess.  A test guess might be all zeros -- a pupil with no wavefront error.  This is quite general and does not assume any prior knowledge.  The L-BFGS-B minimizer tends to perform the best for this problem, from experience."
+    "All that is left to do is ask the optimizer kindly for the true wavefront, given a guess.  A general guess might be all zeros -- a pupil with no wavefront error.  This does not assume any prior knowledge.  The L-BFGS-B minimizer tends to perform the best for this problem, from experience."
    ]
   },
   {
@@ -267,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They differ by about a factor of ten, which is unfortunate.  RMS error of 2 thousandths of a wave is a pretty good result.  What's the peak error? "
+    "They differ by about a factor of ten, which is unfortunate.  The RMS error is 2 thousandths of a wave; a pretty good result.  What's the peak error?"
    ]
   },
   {
@@ -292,6 +289,8 @@
    "source": [
     "More advanced tasks are left to the reader, such as:\n",
     "\n",
+    "* handling of noise\n",
+    "\n",
     "* performance optimization\n",
     "\n",
     "* improved flexibility w.r.t units, pupil shapes, etc\n",
@@ -312,6 +311,13 @@
     "\n",
     "* use of other data, such as [MTF](https://static1.squarespace.com/static/578d10066a4963fd85e0aa32/t/5af25e61aa4a99ed9ecfa39c/1525833475522/bdd_ug_thesis_10.pdf)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
