fix typo in wavefront sensing example

--- a/docs/source/examples/Image-Based Wavefront Sensing.ipynb
+++ b/docs/source/examples/Image-Based Wavefront Sensing.ipynb
@@ -86,7 +86,7 @@
     "\n",
     "def rowplot_psfs(psfs):\n",
     "    fig, axs = plt.subplots(ncols=3, figsize=(10,4))\n",
-    "    for psf, ax in zip(truth_psfs, axs):\n",
+    "    for psf, ax in zip(psfs, axs):\n",
     "        psf.plot2d(fig=fig, ax=ax, axlim=125, power=2)\n",
     "        ax.grid(False)\n",
     "\n",
