update reference format

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -60,7 +60,7 @@
   journal   = {31st},
 }
 
-@InProceedings{Pandas,
+@InProceedings{pandas,
   author    = {Wes McKinney},
   title     = {Data Structures for Statistical Computing in Python},
   booktitle = {Proceedings of the 9th Python in Science Conference},
