unit_x, unit_y => x, y && new Detector model (in progress) && some docstring revisions

--- a/docs/source/user_guide/Conventions.ipynb
+++ b/docs/source/user_guide/Conventions.ipynb
@@ -13,7 +13,7 @@
     "* phases\n",
     "* images\n",
     "\n",
-    "Both have common properties of `unit_x` and `unit_y`, which are one dimensional arrays giving the gridded coordinates in x and y."
+    "Both have common properties of `x` and `y`, which are one dimensional arrays giving the gridded coordinates in x and y."
    ]
   },
   {
@@ -28,7 +28,7 @@
     "pu = Pupil()\n",
     "sl = Slit(1, sample_spacing=0.075, samples=64)\n",
     "\n",
-    "pu.unit_x[:3], sl.unit_y[:3]  # only first three elements for brevity"
+    "pu.x[:3], sl.y[:3]  # only first three elements for brevity"
    ]
   },
   {
