--- a/docs/source/user_guide/Convolvables.ipynb
+++ b/docs/source/user_guide/Convolvables.ipynb
@@ -68,7 +68,7 @@
     "import numpy as np\n",
     "x = y = np.linspace(-20,20,256)\n",
     "z = np.random.uniform(size=256**2).reshape(256,256)\n",
-    "c = Convolvable(data=z, unit_x=x, unit_y=y, has_analytic_ft=False)"
+    "c = Convolvable(data=z, x=x, y=y, has_analytic_ft=False)"
    ]
   },
   {
@@ -104,10 +104,10 @@
     "        else:\n",
     "            arr, x, y = None, m.zeros(2), m.zeros(2)\n",
     "\n",
-    "        super().__init__(data=arr, unit_x=x, unit_y=y, has_analytic_ft=True)\n",
+    "        super().__init__(data=arr, x=x, y=y, has_analytic_ft=True)\n",
     "\n",
-    "    def analytic_ft(self, unit_x, unit_y):\n",
-    "        xq, yq = m.meshgrid(unit_x, unit_y)\n",
+    "    def analytic_ft(self, x, y):\n",
+    "        xq, yq = m.meshgrid(x, y)\n",
     "        # factor of pi corrects for jinc being modulo pi\n",
     "        # factor of 2 converts radius to diameter\n",
     "        rho = m.sqrt(xq**2 + yq**2) * self.width * 2 * m.pi\n",
