--- a/docs/source/user_guide/MTFs.ipynb
+++ b/docs/source/user_guide/MTFs.ipynb
@@ -25,7 +25,7 @@
     "from prysm import MTF\n",
     "x = y = 1/np.linspace(-1,1,128)\n",
     "z = np.random.random((128,128))\n",
-    "mt = MTF(data=z, unit_x=x, unit_y=y)"
+    "mt = MTF(data=z, x=x, y=y)"
    ]
   },
   {
