--- a/docs/source/user_guide/PSFs.ipynb
+++ b/docs/source/user_guide/PSFs.ipynb
@@ -19,7 +19,7 @@
     "from prysm import PSF\n",
     "x = y = np.linspace(-1,1,128)\n",
     "z = np.random.random((128,128))\n",
-    "ps = PSF(data=z, unit_x=x, unit_y=y)"
+    "ps = PSF(data=z, x=x, y=y)"
    ]
   },
   {
